# cyrux-blockchain

./: CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  docker_cheatsheet.md  gramine.Dockerfile
.github/actions/build-core/: action.yml
.github/workflows/: build-nightly-release.yml  build.yml
crates/cyrux-allocator/: Cargo.toml
crates/cyrux-async-executor/: Cargo.toml
crates/cyrux-clap-parsers/: Cargo.toml
crates/cyrux-crypto/: Cargo.toml
crates/cyrux-crypto/src/: sr25519.rs
crates/cyrux-git-revision/: Cargo.toml  build.rs
crates/cyrux-git-revision/src/: lib.rs
crates/cyrux-mq/: Cargo.toml
crates/cyrux-mq/src/: send_queue.rs  types.rs
crates/cyrux-mq/tests/: tests.rs
crates/cyrux-node-rpc-ext/: Cargo.toml
crates/cyrux-node-rpc-ext/src/: lib.rs  mq_seq.rs
crates/cyrux-node-rpc-ext/types/: Cargo.toml
crates/cyrux-rocket-middleware/: Cargo.toml
crates/cyrux-sanitized-logger/: Cargo.toml
crates/cyrux-sanitized-logger/src/: lib.rs  test.rs
crates/cyrux-scheduler/: Cargo.toml
crates/cyrux-serde-more/: Cargo.toml
crates/cyrux-trie-storage/: Cargo.toml
crates/cyrux-trie-storage/tests/: test_state_root.rs
crates/cyrux-types/: Cargo.toml
crates/cyrux-types/src/: contract.rs  lib.rs
crates/cyrux-wasm-checker/: Cargo.toml
crates/cyrux-wasmer-tunables/: Cargo.toml
crates/phactory/: Cargo.toml
crates/phactory/api/: Cargo.toml
crates/phactory/pal/: Cargo.toml
crates/phactory/src/: bin_api_service.rs  lib.rs  nts.rs  prpc_service.rs  secret_channel.rs  storage.rs  types.rs
crates/phaxt/: Cargo.toml
crates/phaxt/src/: chain_api.rs  rpc.rs
crates/pink-libs/kv-session/: Cargo.toml
crates/pink-libs/s3/: Cargo.toml  README.md
crates/pink-libs/subrpc/: Cargo.toml
crates/pink-libs/utils/: Cargo.toml
crates/pink/chain-extension/: Cargo.toml
crates/pink/loader/: Cargo.toml
crates/pink/macro/: Cargo.toml
crates/pink/pink/: Cargo.toml  README.md
crates/pink/pink-types/: Cargo.toml
crates/pink/runtime/: Cargo.toml  README.md  cov.sh
crates/pink/runtime/src/: lib.rs  types.rs
crates/pink/runtime/src/capi/: ecall_impl.rs  mod.rs
crates/pink/runtime/src/runtime/: extension.rs  pallet_pink.rs
crates/pink/runtime/src/storage/: mod.rs
crates/pink/runtime/tests/: test_pink_contract.rs
crates/pink/runtime/tests/fixtures/check_system/: check_system.json
crates/pink/runtime/tests/fixtures/cross/: metadata.json
crates/pink/runtime/tests/fixtures/flip/: metadata.json
crates/pink/runtime/tests/fixtures/hooks_test/: metadata.json
crates/pink/runtime/tests/fixtures/mqproxy/: metadata.json
crates/pink/runtime/tests/fixtures/signing/: metadata.json
crates/pink/runtime/tests/fixtures/system/: system.json
crates/pink/runtime/tests/fixtures/use_cache/: metadata.json  use_cache.json
crates/pink/runtime/tests/helpers/: test_cluster.rs
crates/rustfmt-snippet/: Cargo.toml
crates/sgx-attestation/sample/: ias_attestation.json
crates/sidevm/env/: Cargo.toml
crates/sidevm/host-runtime/: Cargo.toml
crates/sidevm/macro/: Cargo.toml
crates/sidevm/sidevm/: Cargo.toml
crates/this-crate/: Cargo.toml
dockerfile.d/: 01_apt.sh  console.sh
docs/: event-chain.md  relayer.md  responsible-disclosure.md  rpc.md  test.md  testnet.md  threads-in-pruntime.md
e2e/: package.json
e2e/contracts/check_system/: getCollateral.js
e2e/src/: fullstack.js  setup-drivers.js
e2e/src/utils/: pm.js
pallets/cyrux/: Cargo.toml
pallets/cyrux/mq-runtime-api/: Cargo.toml
pallets/cyrux/src/: lib.rs  mock.rs  mq.rs  ott.rs  phat.rs  phat_tokenomic.rs  registry.rs  stake_pool.rs  test.rs
pallets/offchain-rollup/: Cargo.toml
scripts/: compare-gk-egress.py  coverage-pallets.sh  fix_pruntime_justification_error.sh  mm-eip712.html
scripts/debug-cli/: Cargo.toml
scripts/debug-cli/src/: main.rs  query.rs
scripts/js/: package.json
scripts/js/bugfix-tools/: b186-check-miner-sequence.js  b500-check-fix-compete.js  b500-check-post-missing.js  b500-dump-events.js  b500-gen-reconcile.js  b500-preprocess.js  b500-reconstruct-error.js  b527-check-bad-req.js  calcInlineExternalHash.js  checkRegistrationState.js  checkStakeLedgerBalanced.js  download-wasm.js  dumpLockChart.js  gkrecon-dump-events.js  playground.js  spv2-mig-missing-rewards.js
scripts/js/src/: console.js  genLaunchTransactions.js  migration_check.js
scripts/prometheus_exporter/: start.sh
scripts/run/: README.md  node.sh
standalone/executor/: Cargo.toml
standalone/headers-cache/: Cargo.toml  README.md
standalone/headers-cache/src/: web_api.rs
standalone/node/: Cargo.toml  build.rs
standalone/node/res/: phala_testnet.json
standalone/node/src/: chain_spec.rs  command.rs  service.rs
standalone/node/tests/: build_spec_works.rs  common.rs  running_the_node_and_interrupt.rs  temp_base_path_works.rs  version.rs
standalone/phat-poller/: Cargo.toml
standalone/phat-poller/src/: app.rs  args.rs  query.rs
standalone/pherry/: Cargo.toml
standalone/pherry/src/: authority.rs  chain_client.rs  lib.rs  types.rs
standalone/prb/: Cargo.toml  compose.example.yml
standalone/prb/src/: api.rs  bus.rs  cli.rs  compute_management.rs  datasource.rs  headers_db.rs  messages.rs  pool_operator.rs  processor.rs  repository.rs  tx.rs  wm.rs  worker.rs  worker_status.rs
standalone/prouter/: Cargo.toml  README.md
standalone/prouter/src/: config.rs  i2pd.rs  main.rs  server.rs  translator.rs
standalone/pruntime/: Cargo.toml
standalone/pruntime/src/: api_server.rs  main.rs  pal_gramine.rs
standalone/replay/: Cargo.toml
standalone/runtime/: Cargo.toml
standalone/sfq-test/: Cargo.toml
subxt/: CODEOWNERS  README.md
subxt/examples/: README.md
(+54 files in other folders)
