[package]
name = "pink-runtime"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
tracing = "0.1"
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }

sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "release-polkadot-v1.5.0" }

scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
    "serde",
    "decode",
] }

cyrux-types = { path = "../../cyrux-types" }
cyrux-crypto = { path = "../../cyrux-crypto" }
pink = { path = "../pink" }
pink-chain-extension = { path = "../chain-extension" }
pink-capi = { path = "../capi" }
cyrux-sanitized-logger = { path = "../../cyrux-sanitized-logger" }
hash-db = "0.16.0"
anyhow = "1"
cyrux-git-revision = { path = "../../cyrux-git-revision" }
cyrux-wasm-checker = { path = "../../cyrux-wasm-checker" }

[dev-dependencies]
insta = "1.7.2"
hex-literal = "0.4.1"
this-crate = "0.1"
env_logger = "0.11"
environmental = "1"
assert_matches = "1"
serde = { version = "1.0.130", features = ["derive"] }
im = { version = "15", features = ["serde"] }
rusty-fork = "0.3.0"
ink = "4"
check_system = { path = "../../../e2e/contracts/check_system", features = ["ink-as-dependency"] }

[features]
default = ["allocator"]
allocator = []
